61-login form added

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -5,3 +5,11 @@
 .header img{
     width: 67px;
 }
+.login{
+    float: right;
+    width: 30px;
+color: wheat;
+}
+.login a {
+    color: black;
+}
